loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:3: error: not found: value getColorSol
} while(getColorSol()==Color.yellow) 
        ^