loopdowhile.LoopDoWhile.scala.code
do{
  avance()
} while(getColorSol()==Color.yellow)